# stm32ProjectTemplate

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE.md  README.adoc  build-target.sh  clean.sh  run-docker-native.sh  run-docker.sh  todo.adoc
application/: CMakeLists.txt  main.cpp
application/STM32F4xx/: stm32f4xx_it.c
application/STM32G4xx/: stm32g4xx_it.c  system_stm32g4xx.c
application/bsp/: CMakeLists.txt
application/bsp/nucleo-g474re/: CMakeLists.txt
application/bsp/nucleo-g474re/inc/: BSP_setup.h
application/bsp/nucleo-g474re/src/: BSP_setup.c
application/components/: CMakeLists.txt
application/components/adder/: CMakeLists.txt
application/components/adder/inc/: adder.h
application/components/adder/src/: adder.cpp
application/components/fpmath/: CMakeLists.txt
application/components/fpmath/inc/: fpmath.h
application/components/fpmath/src/: fpmath.c
application/components/led/: CMakeLists.txt
application/components/led/inc/: led.h
application/components/led/src/: led.cpp
application/components/observer/: CMakeLists.txt
application/components/observer/examples/: CMakeLists.txt  obs_example.c  obs_example.h
application/components/observer/inc/: IObserver.h  ISubject.h
application/components/observer/src/: Observer.c
application/components/observer/test/: CMakeLists.txt  ObserverTest.cpp  utest.adoc
application/components/relay/: CMakeLists.txt
application/components/relay/inc/: relay.h
application/components/relay/src/: relay.cpp
application/platform/: CMakeLists.txt
application/platform/mcal/clockctrl/: CMakeLists.txt  README.adoc
application/platform/mcal/clockctrl/doc/: design_notes.md
application/platform/mcal/clockctrl/inc/: clockctrl.h
application/platform/mcal/clockctrl/src/: clockctrl.cpp
application/platform/mcal/dio/: CMakeLists.txt
application/platform/mcal/dio/doc/: README.adoc
application/platform/mcal/dio/inc/: dio.h
application/platform/mcal/dio/src/: dio.cpp
application/platform/mcal/i2c/: CMakeLists.txt
application/platform/mcal/i2c/inc/: i2c.h
application/platform/mcal/i2c/src/: i2c.cpp
application/platform/mcal/uart/: CMakeLists.txt
cmake/: cm4.cmake  gcc-arm-none-eabi.cmake  utilities.cmake
docs/: stm32g474nucleo.adoc
